(feat): add location filter & event